added imgs for html and css

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
         <p>Les technologies sur lesquels je me forme en ce moment:</p>
         <div>
           <img src="./img/html.png" />
-          <img src="/img/css.png" />
-          <img src="/img/javascript.png" />
+          <img src="./img/css.png" />
+          <img src="./img/javascript.png" />
         </div>
         <p>
           Prochainement, je suivrai la formation
