added easyJet project screenshot and link

--- a/index.html
+++ b/index.html
@@ -57,6 +57,17 @@
       </section>
       <section id="projects">
         <h2>Projets :</h2>
+        <h3>Réalisations actuelles</h3>
+        <div class="project-container">
+          <img src="./img/easyJet-clone.png" alt="Réplique Easy Jet" />
+          <div>
+            <h3>easyJet</h3>
+            <p>Réplique du site easyJet</p>
+            <a href="https://easyjet-clone.netlify.app/" target="_blank"
+              >Voir la réplique</a
+            >
+          </div>
+        </div>
         <p>
           Au cours de ma formation Développement Web & Mobile, je réaliserai
           plusieurs répliques d'applications Web et d'applications Mobiles :
