--- a/index.html
+++ b/index.html
@@ -57,13 +57,17 @@
       </section>
       <section id="projects">
         <h2>Projets :</h2>
-        <h3>Réalisations actuelles</h3>
         <div class="project-container">
           <img src="./img/easyJet-clone.png" alt="Réplique Easy Jet" />
           <div>
             <h3>easyJet</h3>
-            <p>Réplique du site easyJet</p>
-            <a href="https://easyjet-clone.netlify.app/" target="_blank"
+            <ul>
+              <li>Réplique du site easyJet</li>
+            </ul>
+            <a
+              href="https://easyjet-clone.netlify.app/"
+              target="_blank"
+              class="btn-easyjet"
               >Voir la réplique</a
             >
           </div>
