add RNCP Level 6 certification mention in about-me section

--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
         </div>
         <h3>À propos de moi</h3>
         <p>
-          Je suis Sofiane BELKHACHINA, j'ai 29 ans et je suis en reconversion
-          professionnelle. J’ai suivi la formation en e-learning pendant 3 mois
+          Je suis Sofiane BELKHACHINA, j’ai 29 ans et je suis en reconversion
+          professionnelle. J’ai suivi une formation en e-learning pendant 3 mois
           chez Le Reacteur, où j’ai acquis les bases du développement web et
           réalisé mes premiers projets concrets. Je suis actuellement à la
           recherche d’une alternance afin d’intégrer la formation Développement
-          Web & Mobile chez Le Reacteur et continuer à progresser sur des
-          technologies modernes.
+          Web & Mobile — certifiée RNCP de Niveau 6 (Bac+3/4) de Concepteur
+          Développeur d’Applications — chez Le Reacteur, pour continuer à
+          progresser sur des technologies modernes.
         </p>
       </section>
       <section id="education">
