--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <li>Réplique du site easyJet</li>
             </ul>
             <a
-              href="https://easyjet-clone.netlify.app/"
+              href="https://projet-01.netlify.app"
               target="_blank"
               class="btn-easyjet"
               >Voir la réplique</a
