update image link for EasyJet screenshot

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <section id="projects">
         <h2>Projets :</h2>
         <div class="project-container">
-          <img src="./img/easyJet-clone.png" alt="Réplique Easy Jet" />
+          <img src="./img/easyJet.png" alt="Réplique Easy Jet" />
           <div>
             <h3>easyJet</h3>
             <ul>
