site link update for easyjet learning project

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <li>Réplique du site easyJet</li>
             </ul>
             <a
-              href="https://projet-01.netlify.app"
+              href="https://learning-project-ej01.netlify.app"
               target="_blank"
               class="btn-easyjet"
               >Voir la réplique</a
