--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
           <img src="./img/html.png" />
           <img src="./img/css.png" />
           <img src="./img/javascript.png" />
+          <div class="vue-js">
+            <p>Vue.js</p>
+            <img src="./img/Vue.js.png" />
+          </div>
         </div>
         <p>
           Prochainement, je suivrai la formation
