update css technos class

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <script
+      src="https://kit.fontawesome.com/84c6e45e83.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -47,7 +51,7 @@
           <img src="./img/html.png" />
           <img src="./img/css.png" />
           <img src="./img/javascript.png" />
-          <div class="vue-js">
+          <div class="technos">
             <p>Vue.js</p>
             <img src="./img/Vue.js.png" />
           </div>
@@ -56,11 +60,13 @@
           Prochainement, je suivrai la formation
           <span>Développement Web & Mobile</span> au <span>Réacteur</span> afin
           de perfectionner mes connaissances et d'apprendre de nouvelles
-          technologies :
+          technologies comme :
         </p>
         <div>
           <img src="./img/mongodb.png" />
           <img src="./img/react.png" />
+          <img src="./img/React-Native.png" />
+          <img src="./img/TypeScript.png" ; style="height: 80px" />
         </div>
       </section>
       <section id="projects">
