--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         </p>
         <div>
           <img src="./img/mongodb.png" />
-          <img src="./img/react.png" />
+          <img src="./img/react.png" style="margin-top: 4px" />
           <img src="./img/React-Native.png" />
-          <img src="./img/TypeScript.png" ; style="height: 80px" />
+          <img src="./img/TypeScript.png" />
         </div>
       </section>
       <section id="projects">
