add alt for imgs

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <a href="#projects">Projets</a>
         <a href="#contact">Contact</a>
       </nav>
-      <img class="main-image" src="./img/computer.jpeg" />
+      <img class="main-image" src="./img/computer.jpeg" alt="a computer" />
       <section id="about-me">
         <div class="informations">
           <img src="./img/sofianeBELKHACHINA.jpg" />
@@ -44,25 +44,25 @@
         <h2>Formation :</h2>
         <p>Les technologies sur lesquels je me forme en ce moment:</p>
         <div>
-          <img src="./img/html.png" />
-          <img src="./img/css.png" />
-          <img src="./img/javascript.png" />
+          <img src="./img/html.png" alt="HTML logo" />
+          <img src="./img/css.png" alt="CSS logo" />
+          <img src="./img/javascript.png" alt="JavaScript logo" />
           <div class="technos">
             <p>Vue.js</p>
-            <img src="./img/Vue.js.png" />
+            <img src="./img/Vue.js.png" alt="Vue.js logo" />
           </div>
         </div>
-        <p>
+        <p style="margin-bottom: 50px">
           Prochainement, je suivrai la formation
           <span>Développement Web & Mobile</span> au <span>Réacteur</span> afin
           de perfectionner mes connaissances et d'apprendre de nouvelles
           technologies comme :
         </p>
         <div>
-          <img src="./img/mongodb.png" />
-          <img src="./img/react.png" style="margin-top: 4px" />
-          <img src="./img/React-Native.png" />
-          <img src="./img/TypeScript.png" />
+          <img src="./img/mongodb.png" alt="mongodb logo" />
+          <img src="./img/react.png" style="margin-top: 4px" alt="react logo" />
+          <img src="./img/React-Native.png" alt="React-Native logo" />
+          <img src="./img/TypeScript.png" alt="TypeScript logo" />
         </div>
       </section>
       <section id="projects">
@@ -87,7 +87,7 @@
           plusieurs répliques d'applications Web et d'applications Mobiles :
         </p>
         <div class="project-container">
-          <img src="./img/tripadvisor.png" />
+          <img src="./img/tripadvisor.png" alt="tripadvisor logo" />
           <div>
             <h3>Tripadvisor Web</h3>
             <h4>Projet Front-End</h4>
@@ -99,7 +99,7 @@
         </div>
 
         <div class="project-container">
-          <img src="./img/deliveroo.png" />
+          <img src="./img/deliveroo.png" alt="deliveroo logo" />
           <div>
             <h3>Deliveroo Web</h3>
             <h4>Projet Front-End</h4>
@@ -111,7 +111,7 @@
         </div>
 
         <div class="project-container">
-          <img src="./img/vinted.png" />
+          <img src="./img/vinted.png" alt="vinted logo" />
           <div>
             <h3>Vinted Web</h3>
             <h4>Projet Full-Stack</h4>
@@ -127,7 +127,7 @@
         </div>
 
         <div class="project-container">
-          <img src="./img/airbnb.png" />
+          <img src="./img/airbnb.png" alt="airbnb logo" />
           <div>
             <h3>Airbnb Mobile</h3>
             <h4>Projet Full-Stack</h4>
@@ -145,13 +145,13 @@
       <section id="contact">
         <h2>Mes liens :</h2>
         <div>
-          <img src="./img/github.png" />
+          <img src="./img/github.png" alt="github logo" />
           <a href="https://github.com/sofianeBELKHACHINA" target="_blank"
             >https://github.com/sofianeBELKHACHINA</a
           >
         </div>
         <div>
-          <img src="./img/mail.jpg" />
+          <img src="./img/mail.jpg" alt="mail logo" />
           <a href="">sofiane.belkhachina@gmail.com</a>
         </div>
       </section>
