--- a/index.html
+++ b/index.html
@@ -146,7 +146,10 @@
         <h2>Mes liens :</h2>
         <div>
           <img src="./img/github.png" alt="github logo" />
-          <a href="https://github.com/sofianeBELKHACHINA" target="_blank"
+          <a
+            href="https://github.com/sofianeBELKHACHINA"
+            target="_blank"
+            rel="noopener noreferrer"
             >https://github.com/sofianeBELKHACHINA</a
           >
         </div>
