add responsive styles for mobile and tablet

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="./css/reset.css" />
     <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="./css/responsive.css" />
   </head>
   <body>
     <header>
@@ -42,15 +43,12 @@
       </section>
       <section id="education">
         <h2>Formation :</h2>
-        <p>Les technologies sur lesquels je me forme en ce moment:</p>
+        <p>Les technologies sur lesquels je me forme en ce moment :</p>
         <div>
           <img src="./img/html.png" alt="HTML logo" />
           <img src="./img/css.png" alt="CSS logo" />
           <img src="./img/javascript.png" alt="JavaScript logo" />
-          <div class="technos">
-            <p>Vue.js</p>
-            <img src="./img/Vue.js.png" alt="Vue.js logo" />
-          </div>
+          <img src="./img/Vue.js.png" alt="Vue.js logo" />
         </div>
         <p style="margin-bottom: 50px">
           Prochainement, je suivrai la formation
