Align logos in columnes using CSS grid in #education section

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <section id="education">
         <h2>Formation :</h2>
         <p>Les technologies sur lesquels je me forme en ce moment :</p>
-        <div>
+        <div class="logo-row">
           <img src="./img/html.png" alt="HTML logo" />
           <img src="./img/css.png" alt="CSS logo" />
           <img src="./img/javascript.png" alt="JavaScript logo" />
@@ -56,7 +56,7 @@
           de perfectionner mes connaissances et d'apprendre de nouvelles
           technologies comme :
         </p>
-        <div>
+        <div class="logo-row">
           <img src="./img/mongodb.png" alt="mongodb logo" />
           <img src="./img/react.png" style="margin-top: 4px" alt="react logo" />
           <img src="./img/React-Native.png" alt="React-Native logo" />
